first working version

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "quick static sites from markdown files",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
+  "bin": {
+    "npmts": "assets/cliNpmts.js"
+  },
   "scripts": {
     "test": "(npmts --notest && npm run buildSiteTest)",
     "buildSiteTest": "(cd test/ && node ../dist/cli.js)"
@@ -25,11 +28,15 @@
   "homepage": "https://gitlab.com/pushrocks/quicksite#README",
   "dependencies": {
     "@types/handlebars": "^4.0.31",
+    "@types/highlight.js": "^9.1.9",
     "@types/marked": "^0.0.28",
     "handlebars": "^4.0.6",
+    "highlight.js": "^9.9.0",
     "marked": "^0.3.6",
     "smartcli": "^2.0.1",
     "smartfile": "^4.1.6",
+    "smarthbs": "^1.0.4",
+    "smartpath": "^3.2.8",
     "smartq": "^1.1.1",
     "typings-global": "^1.0.14"
   },
