--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "marked": "^0.3.6",
     "smartcli": "^2.0.1",
     "smartfile": "^4.1.7",
+    "smartfm": "^1.0.2",
     "smarthbs": "^1.0.5",
     "smartpath": "^3.2.8",
     "smartq": "^1.1.1",
