--- a/package.json
+++ b/package.json
@@ -28,20 +28,21 @@
   },
   "homepage": "https://gitlab.com/pushrocks/quicksite#README",
   "dependencies": {
-    "@types/handlebars": "^4.0.31",
+    "@types/handlebars": "^4.0.32",
     "@types/highlight.js": "^9.1.9",
     "@types/marked": "^0.0.28",
-    "beautylog": "^6.1.1",
+    "beautylog": "^6.1.5",
+    "bourbon": "^4.3.3",
     "handlebars": "^4.0.6",
-    "highlight.js": "^9.9.0",
+    "highlight.js": "^9.10.0",
     "marked": "^0.3.6",
     "smartcli": "^2.0.1",
-    "smartfile": "^4.1.7",
+    "smartfile": "^4.1.8",
     "smartfm": "^1.0.2",
     "smarthbs": "^1.0.5",
     "smartpath": "^3.2.8",
     "smartq": "^1.1.1",
-    "smartsass": "^1.0.3",
+    "smartsass": "^1.0.4",
     "typings-global": "^1.0.14"
   },
   "devDependencies": {
