--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/marked": "^0.0.28",
     "beautylog": "^6.1.5",
     "bourbon": "^4.3.3",
+    "bourbon-neat": "^2.0.0",
     "handlebars": "^4.0.6",
     "highlight.js": "^9.10.0",
     "marked": "^0.3.6",
@@ -42,7 +43,7 @@
     "smarthbs": "^1.0.5",
     "smartpath": "^3.2.8",
     "smartq": "^1.1.1",
-    "smartsass": "^1.0.4",
+    "smartsass": "^1.0.5",
     "typings-global": "^1.0.14"
   },
   "devDependencies": {
