--- a/package.json
+++ b/package.json
@@ -28,29 +28,26 @@
   },
   "homepage": "https://gitlab.com/pushrocks/quicksite#README",
   "dependencies": {
-    "@types/handlebars": "^4.0.32",
+    "@types/handlebars": "^4.0.35",
     "@types/highlight.js": "^9.1.9",
-    "@types/marked": "^0.0.28",
-    "beautylog": "^6.1.5",
-    "bourbon": "^4.3.3",
+    "@types/marked": "^0.3.0",
+    "beautylog": "^6.1.10",
+    "bourbon": "^4.3.4",
     "bourbon-neat": "^2.0.0",
-    "handlebars": "^4.0.6",
-    "highlight.js": "^9.10.0",
+    "handlebars": "^4.0.10",
+    "highlight.js": "^9.12.0",
     "marked": "^0.3.6",
-    "npmextra": "^2.0.5",
-    "smartcli": "^2.0.1",
-    "smartenv": "^2.0.6",
-    "smartfile": "^4.1.9",
-    "smartfm": "^1.0.2",
-    "smarthbs": "^1.0.8",
+    "npmextra": "^2.0.9",
+    "smartcli": "^2.0.7",
+    "smartenv": "^3.0.0",
+    "smartfile": "^4.2.20",
+    "smartfm": "^1.0.5",
+    "smarthbs": "^1.0.16",
     "smartpath": "^3.2.8",
-    "smartq": "^1.1.1",
+    "smartq": "^1.1.6",
     "smartrequire": "^1.0.2",
     "smartsass": "^1.0.5",
-    "typings-global": "^1.0.14"
+    "typings-global": "^1.0.20"
   },
-  "devDependencies": {
-    "smartchai": "^1.0.3",
-    "typings-test": "^1.0.3"
-  }
+  "devDependencies": {}
 }
