--- a/package.json
+++ b/package.json
@@ -4,13 +4,8 @@
   "description": "quick static sites from markdown files",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
-  "bin": {
-    "quicksite": "dist/cli.js"
-  },
   "scripts": {
-    "test": "(npmts --notest && npm run buildSiteTest)",
-    "buildSiteTest": "(cd test/ && node ../dist/cli.js)",
-    "serve": "(cd test/public && browser-sync start -s)"
+    "test": "(npmts)"
   },
   "repository": {
     "type": "git",
@@ -29,16 +24,9 @@
   "homepage": "https://gitlab.com/pushrocks/quicksite#README",
   "dependencies": {
     "@types/handlebars": "^4.0.36",
-    "@types/highlight.js": "^9.1.10",
-    "@types/marked": "^0.3.0",
     "beautylog": "^6.1.10",
-    "bourbon": "^4.3.4",
-    "bourbon-neat": "^2.0.0",
     "handlebars": "^4.0.10",
-    "highlight.js": "^9.12.0",
-    "marked": "^0.3.6",
     "npmextra": "^2.0.9",
-    "smartcli": "^2.0.9",
     "smartenv": "^3.0.0",
     "smartfile": "^4.2.26",
     "smartfm": "^1.0.5",
@@ -46,9 +34,10 @@
     "smartpath": "^3.2.8",
     "smartq": "^1.1.6",
     "smartrequire": "^1.0.2",
-    "smartsass": "^1.0.5",
     "smartupdate": "^1.0.13",
     "typings-global": "^1.0.20"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "tapbundle": "^1.1.8"
+  }
 }
